# int2026

./: Makefile  README.md
.github/workflows/: development.yaml
backend/: .dockerignore  Makefile  dev.db  pyproject.toml
backend/.github/workflows/: development.yaml
backend/database/: config.py  provider.py
backend/docker/: Dockerfile
backend/requirements/: dev.txt
backend/src/: config.py  main.py
backend/src/admin/: dependencies.py  exceptions.py  repository.py  router.py  schemas.py  services.py
backend/src/auth/: config.py  constants.py  dependencies.py  exceptions.py  models.py  provider.py  router.py  schemas.py  services.py  utils.py
backend/src/users/: dependencies.py  repository.py  router.py  schemas.py  services.py
